[package]
name = "rust-jvm3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.6"
once_cell = "1.10.0"
smallvec = "1.8.0"
clap = { version = "3.1.9", features = ["derive"] }

[profile.release]
debug = 1

[features]
statistics = []